Fix invisible thumbnails in Alt-Tab-Menu

--- a/src/desktops/cinnamon/scss/components/_alt-tab.scss
+++ b/src/desktops/cinnamon/scss/components/_alt-tab.scss
@@ -47,7 +47,7 @@
     }
 
     .thumbnail {
-        max-width: $spacing * 51.2;
+        width: $spacing * 51.2;
     }
 
     .alt-tab-app {}
